--- a/build_stoplist.html
+++ b/build_stoplist.html
@@ -7518,6 +7518,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Build-Stoplist---Top-50-Words">Build Stoplist - Top 50 Words<a class="anchor-link" href="#Build-Stoplist---Top-50-Words">¶</a></h1><p>This notebook builds a stoplist by analyzing word frequencies across documents in the <code>docs</code> directory.</p>
+<p><strong>Note:</strong> Only the most common English stop words (the, is, and, in, a, etc.) are filtered out.</p>
 </div>
 </div>
 </div>
@@ -7526,7 +7527,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [1]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [21]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span><span class="w"> </span><span class="nn">pathlib</span><span class="o">,</span><span class="w"> </span><span class="nn">re</span><span class="o">,</span><span class="w"> </span><span class="nn">collections</span>
@@ -7535,6 +7536,13 @@ a.anchor-link {
 <span class="n">OUT</span> <span class="o">=</span> <span class="n">pathlib</span><span class="o">.</span><span class="n">Path</span><span class="p">(</span><span class="s2">"stoplist_top50.txt"</span><span class="p">)</span>
 
 <span class="n">TOKEN_SPLIT</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">compile</span><span class="p">(</span><span class="sa">r</span><span class="s2">"[^A-Za-z]+"</span><span class="p">)</span>
+
+<span class="c1"># Common English stop words to filter out (minimal set)</span>
+<span class="n">STOP_WORDS</span> <span class="o">=</span> <span class="p">{</span>
+    <span class="s1">'a'</span><span class="p">,</span> <span class="s1">'an'</span><span class="p">,</span> <span class="s1">'and'</span><span class="p">,</span> <span class="s1">'are'</span><span class="p">,</span> <span class="s1">'as'</span><span class="p">,</span> <span class="s1">'at'</span><span class="p">,</span> <span class="s1">'be'</span><span class="p">,</span> <span class="s1">'by'</span><span class="p">,</span> <span class="s1">'for'</span><span class="p">,</span> <span class="s1">'from'</span><span class="p">,</span>
+    <span class="s1">'has'</span><span class="p">,</span> <span class="s1">'in'</span><span class="p">,</span> <span class="s1">'is'</span><span class="p">,</span> <span class="s1">'it'</span><span class="p">,</span> <span class="s1">'of'</span><span class="p">,</span> <span class="s1">'on'</span><span class="p">,</span> <span class="s1">'the'</span><span class="p">,</span> <span class="s1">'to'</span><span class="p">,</span>
+    <span class="s1">'was'</span><span class="p">,</span> <span class="s1">'were'</span><span class="p">,</span> <span class="s1">'with'</span><span class="p">,</span> <span class="s1">'you'</span>
+<span class="p">}</span>
 </pre></div>
 </div>
 </div>
@@ -7545,10 +7553,10 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [22]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="k">def</span><span class="w"> </span><span class="nf">build_stoplist_top50</span><span class="p">():</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="k">def</span><span class="w"> </span><span class="nf">build_stoplist_top50</span><span class="p">(</span><span class="n">filter_stopwords</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
     <span class="n">counter</span> <span class="o">=</span> <span class="n">collections</span><span class="o">.</span><span class="n">Counter</span><span class="p">()</span>
 
     <span class="n">files</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">DOCS</span><span class="o">.</span><span class="n">glob</span><span class="p">(</span><span class="s2">"*.txt"</span><span class="p">))</span>
@@ -7560,6 +7568,11 @@ a.anchor-link {
         <span class="c1"># drop header line "# TITLE: ..."</span>
         <span class="n">txt</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">sub</span><span class="p">(</span><span class="sa">r</span><span class="s2">"^# title: .*?\n\n"</span><span class="p">,</span> <span class="s2">""</span><span class="p">,</span> <span class="n">txt</span><span class="p">,</span> <span class="n">flags</span><span class="o">=</span><span class="n">re</span><span class="o">.</span><span class="n">IGNORECASE</span><span class="p">)</span>
         <span class="n">tokens</span> <span class="o">=</span> <span class="p">[</span><span class="n">t</span> <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">TOKEN_SPLIT</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="n">txt</span><span class="p">)</span> <span class="k">if</span> <span class="n">t</span> <span class="ow">and</span> <span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">t</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">1</span> <span class="ow">or</span> <span class="n">t</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">"a"</span><span class="p">,</span> <span class="s2">"i"</span><span class="p">))]</span>
+        
+        <span class="c1"># Filter out stop words if requested</span>
+        <span class="k">if</span> <span class="n">filter_stopwords</span><span class="p">:</span>
+            <span class="n">tokens</span> <span class="o">=</span> <span class="p">[</span><span class="n">t</span> <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">tokens</span> <span class="k">if</span> <span class="n">t</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">STOP_WORDS</span><span class="p">]</span>
+        
         <span class="n">counter</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">tokens</span><span class="p">)</span>
 
     <span class="n">top50</span> <span class="o">=</span> <span class="n">counter</span><span class="o">.</span><span class="n">most_common</span><span class="p">(</span><span class="mi">50</span><span class="p">)</span>
@@ -7581,12 +7594,14 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [3]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [23]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Run the function to build the stoplist</span>
-<span class="n">top50</span> <span class="o">=</span> <span class="n">build_stoplist_top50</span><span class="p">()</span>
-<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Saved: </span><span class="si">{</span><span class="n">OUT</span><span class="o">.</span><span class="n">resolve</span><span class="p">()</span><span class="si">}</span><span class="s2">"</span><span class="p">)</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Show which stop words are being filtered</span>
+<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Filtering out </span><span class="si">{</span><span class="nb">len</span><span class="p">(</span><span class="n">STOP_WORDS</span><span class="p">)</span><span class="si">}</span><span class="s2"> common stop words"</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Examples: </span><span class="si">{</span><span class="s1">', '</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">STOP_WORDS</span><span class="p">))[:</span><span class="mi">20</span><span class="p">])</span><span class="si">}</span><span class="s2">..."</span><span class="p">)</span>
+<span class="c1"># Run the function to build the stoplist (with stop word filtering)</span>
+<span class="n">top50</span> <span class="o">=</span> <span class="n">build_stoplist_top50</span><span class="p">(</span><span class="n">filter_stopwords</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
@@ -7599,7 +7614,8 @@ a.anchor-link {
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>Saved: /Users/ramidaood/UNI/אחזור_1/stoplist_top50.txt
+<pre>Filtering out 22 common stop words
+Examples: a, an, and, are, as, at, be, by, for, from, has, in, is, it, of, on, the, to, was, were...
 </pre>
 </div>
 </div>
@@ -7610,7 +7626,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [4]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [24]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Generate and display markdown table</span>
@@ -7644,253 +7660,253 @@ a.anchor-link {
 <tbody>
 <tr>
 <td>1</td>
-<td>the</td>
-<td>391</td>
-</tr>
-<tr>
-<td>2</td>
-<td>of</td>
-<td>208</td>
-</tr>
-<tr>
-<td>3</td>
-<td>and</td>
-<td>164</td>
-</tr>
-<tr>
-<td>4</td>
-<td>in</td>
-<td>156</td>
-</tr>
-<tr>
-<td>5</td>
-<td>a</td>
-<td>135</td>
-</tr>
-<tr>
-<td>6</td>
-<td>on</td>
-<td>114</td>
-</tr>
-<tr>
-<td>7</td>
-<td>to</td>
-<td>87</td>
-</tr>
-<tr>
-<td>8</td>
-<td>was</td>
-<td>80</td>
-</tr>
-<tr>
-<td>9</td>
 <td>retrieved</td>
 <td>79</td>
 </tr>
 <tr>
-<td>10</td>
-<td>with</td>
-<td>74</td>
-</tr>
-<tr>
-<td>11</td>
-<td>you</td>
-<td>67</td>
-</tr>
-<tr>
-<td>12</td>
-<td>for</td>
-<td>54</td>
-</tr>
-<tr>
-<td>13</td>
+<td>2</td>
 <td>orlandi</td>
 <td>49</td>
 </tr>
 <tr>
-<td>14</td>
-<td>by</td>
-<td>48</td>
-</tr>
-<tr>
-<td>15</td>
+<td>3</td>
 <td>county</td>
 <td>47</td>
 </tr>
 <tr>
-<td>16</td>
-<td>is</td>
-<td>46</td>
-</tr>
-<tr>
-<td>17</td>
+<td>4</td>
 <td>otto</td>
 <td>43</td>
 </tr>
 <tr>
-<td>18</td>
-<td>from</td>
-<td>42</td>
-</tr>
-<tr>
-<td>19</td>
-<td>at</td>
-<td>36</td>
-</tr>
-<tr>
-<td>20</td>
+<td>5</td>
 <td>music</td>
 <td>36</td>
 </tr>
 <tr>
-<td>21</td>
-<td>it</td>
-<td>35</td>
-</tr>
-<tr>
-<td>22</td>
-<td>were</td>
-<td>33</td>
-</tr>
-<tr>
-<td>23</td>
-<td>as</td>
-<td>32</td>
-</tr>
-<tr>
-<td>24</td>
+<td>6</td>
 <td>his</td>
 <td>32</td>
 </tr>
 <tr>
-<td>25</td>
+<td>7</td>
 <td>dance</td>
 <td>29</td>
 </tr>
 <tr>
-<td>26</td>
+<td>8</td>
 <td>chaplin</td>
 <td>29</td>
 </tr>
 <tr>
-<td>27</td>
+<td>9</td>
 <td>route</td>
 <td>25</td>
 </tr>
 <tr>
-<td>28</td>
+<td>10</td>
 <td>census</td>
 <td>24</td>
 </tr>
 <tr>
-<td>29</td>
+<td>11</td>
 <td>so</td>
 <td>24</td>
 </tr>
 <tr>
-<td>30</td>
-<td>an</td>
-<td>21</td>
-</tr>
-<tr>
-<td>31</td>
+<td>12</td>
 <td>can</td>
 <td>21</td>
 </tr>
 <tr>
-<td>32</td>
+<td>13</td>
 <td>or</td>
 <td>20</td>
 </tr>
 <tr>
-<td>33</td>
+<td>14</td>
 <td>espa</td>
 <td>20</td>
 </tr>
 <tr>
-<td>34</td>
+<td>15</td>
 <td>single</td>
 <td>19</td>
 </tr>
 <tr>
-<td>35</td>
+<td>16</td>
 <td>washington</td>
 <td>19</td>
 </tr>
 <tr>
-<td>36</td>
+<td>17</td>
 <td>season</td>
 <td>19</td>
 </tr>
 <tr>
-<td>37</td>
+<td>18</td>
 <td>library</td>
 <td>18</td>
 </tr>
 <tr>
-<td>38</td>
+<td>19</td>
 <td>we</td>
 <td>18</td>
 </tr>
 <tr>
-<td>39</td>
+<td>20</td>
 <td>rave</td>
 <td>18</td>
 </tr>
 <tr>
-<td>40</td>
+<td>21</td>
 <td>july</td>
 <td>17</td>
 </tr>
 <tr>
-<td>41</td>
+<td>22</td>
 <td>not</td>
 <td>17</td>
 </tr>
 <tr>
-<td>42</td>
+<td>23</td>
 <td>de</td>
 <td>17</td>
 </tr>
 <tr>
-<td>43</td>
+<td>24</td>
 <td>government</td>
 <td>17</td>
 </tr>
 <tr>
-<td>44</td>
+<td>25</td>
 <td>archived</td>
 <td>17</td>
 </tr>
 <tr>
-<td>45</td>
+<td>26</td>
 <td>original</td>
 <td>17</td>
 </tr>
 <tr>
-<td>46</td>
+<td>27</td>
 <td>beatport</td>
 <td>17</td>
 </tr>
 <tr>
-<td>47</td>
+<td>28</td>
 <td>think</td>
 <td>17</td>
 </tr>
 <tr>
-<td>48</td>
+<td>29</td>
 <td>state</td>
 <td>16</td>
 </tr>
 <tr>
-<td>49</td>
-<td>has</td>
+<td>30</td>
+<td>columbia</td>
 <td>16</td>
 </tr>
 <tr>
-<td>50</td>
-<td>columbia</td>
+<td>31</td>
+<td>walla</td>
 <td>16</td>
+</tr>
+<tr>
+<td>32</td>
+<td>he</td>
+<td>16</td>
+</tr>
+<tr>
+<td>33</td>
+<td>top</td>
+<td>16</td>
+</tr>
+<tr>
+<td>34</td>
+<td>united</td>
+<td>15</td>
+</tr>
+<tr>
+<td>35</td>
+<td>states</td>
+<td>15</td>
+</tr>
+<tr>
+<td>36</td>
+<td>feat</td>
+<td>15</td>
+</tr>
+<tr>
+<td>37</td>
+<td>dancing</td>
+<td>15</td>
+</tr>
+<tr>
+<td>38</td>
+<td>national</td>
+<td>14</td>
+</tr>
+<tr>
+<td>39</td>
+<td>population</td>
+<td>14</td>
+</tr>
+<tr>
+<td>40</td>
+<td>ol</td>
+<td>14</td>
+</tr>
+<tr>
+<td>41</td>
+<td>tracklists</td>
+<td>14</td>
+</tr>
+<tr>
+<td>42</td>
+<td>cerda</td>
+<td>13</td>
+</tr>
+<tr>
+<td>43</td>
+<td>that</td>
+<td>13</td>
+</tr>
+<tr>
+<td>44</td>
+<td>no</td>
+<td>13</td>
+</tr>
+<tr>
+<td>45</td>
+<td>its</td>
+<td>13</td>
+</tr>
+<tr>
+<td>46</td>
+<td>deportivo</td>
+<td>13</td>
+</tr>
+<tr>
+<td>47</td>
+<td>show</td>
+<td>13</td>
+</tr>
+<tr>
+<td>48</td>
+<td>woodstar</td>
+<td>13</td>
+</tr>
+<tr>
+<td>49</td>
+<td>don</td>
+<td>13</td>
+</tr>
+<tr>
+<td>50</td>
+<td>stars</td>
+<td>13</td>
 </tr>
 </tbody>
 </table>
